--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "MaterialKit",
+  "name": "material-kit",
   "version": "1.0.0",
   "description": "Material Kit for Bootstrap 3",
   "main": "index.html",
